--- a/EC2-Template-Userdata.yml
+++ b/EC2-Template-Userdata.yml
@@ -1,83 +1,358 @@
-AWSTemplateFormatVersion: '2010-09-09'
-Description: Template to Create an EC2 instance in a VPC with Userdata
-   
-Parameters:
-  VpcId:
-    Type: String
-    Description: VPC id
-    Default: vpc-0211b4db905971865
-  ImageId:
-    Type: String
-    Description: 'Linux 2 AMI for us-east-1 Region'
-    Default: 'ami-08e4e35cccc6189f4'
-  InstanceType:
-    Type: String
-    Description: Choosing  t2 micro because it is free
-    Default: t2.micro
-  KeyName:
-    Description: SSH Keypair to login to the instance
-    Type: AWS::EC2::KeyPair::KeyName
-    Default: Demo-1332-account
-#  SubnetID:
-#    Type: String
-#    Description: Subnet id
-#    Default:
+# Usage:
+#   aws cloudformation --region <region> create-stack --stack-name <stack name> --template-body file://vpc-fargate.yaml
 
+# This template will:
+#   Create a VPC with:
+#       4 Public Subnets
+#       10 Private Subnets
+#   An Internet Gateway (with routes to it for Public Subnets)
+#   A NAT Gateway for outbound access (with routes from Private Subnets set to use it)
+#     
 Resources:
-  DemoInstance:
-    Type: 'AWS::EC2::Instance'
-    Properties: 
-      ImageId: !Ref ImageId
-      InstanceType: !Ref InstanceType
-      #SubnetId: !Ref SubnetID
-      KeyName: !Ref KeyName
-      SecurityGroupIds: 
-        - !Ref DemoSecurityGroup
-      UserData:
-        Fn::Base64: 
-          !Sub |
-            #!/bin/bash
-            yum update -y
-            yum install -y httpd
-            systemctl start httpd.service
-            systemctl enable httpd.service
-            echo Hello World from $(hostname -f) > /var/www/html/index.html
-      Tags:
-        - Key: Name
-          Value: CFT-pipeline-Instance
-        - Key: ENV
-          Value: Demo
-        - Key: Changeset
-          Value: Yes doing it
-        - Key: Update
-          Value: Yes doing it             
-          
-  DemoSecurityGroup:
-    Type: 'AWS::EC2::SecurityGroup'
-    Properties:
-      VpcId: !Ref VpcId
-      GroupDescription: SG to allow SSH access via port 22
-      SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: '22'
-          ToPort: '22'
-          CidrIp: '0.0.0.0/0'
-        - IpProtocol: tcp
-          FromPort: 80
-          ToPort: 80
-          CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp
-          FromPort: 443
-          ToPort: 443
-          CidrIp: 0.0.0.0/0
-      Tags:
-        - Key: Name
-          Value: EC2-CFT-SG
-Outputs:
-  DemoInstanceId:
-    Description: Instance ID
-    Value: !Ref DemoInstance
+PubPrivateVPC:
+  Type: 'AWS::EC2::VPC'
+  Properties:
+    CidrBlock: 172.31.0.0/16
+    Tags:
+      - Key: "Name"
+        Value: "Seven-Layer-VPC"
 
-  DemoSGId:
-    Description: Securitygroup ID
-    Value: !Ref DemoSecurityGroup
+ExternalELBAZ1:
+  Type: 'AWS::EC2::Subnet'
+  Properties:
+    VpcId: !Ref PubPrivateVPC
+    AvailabilityZone: us-east-1a
+    CidrBlock: 172.31.1.0/24
+    MapPublicIpOnLaunch: true
+    Tags:
+      - Key: "Name"
+        Value: "ExternalELBAZ1"
+
+ExternalELBAZ2:
+  Type: 'AWS::EC2::Subnet'
+  Properties:
+    VpcId: !Ref PubPrivateVPC
+    AvailabilityZone: us-east-1b
+    CidrBlock: 172.31.2.0/24
+    MapPublicIpOnLaunch: true
+    Tags:
+      - Key: "Name"
+        Value: "ExternalELBAZ2"
+
+DMZAZ1:
+  Type: 'AWS::EC2::Subnet'
+  Properties:
+    VpcId: !Ref PubPrivateVPC
+    AvailabilityZone: us-east-1a
+    CidrBlock: 172.31.3.0/24
+    MapPublicIpOnLaunch: true
+    Tags:
+      - Key: "Name"
+        Value: "DMZAZ1"
+
+DMZAZ2:
+  Type: 'AWS::EC2::Subnet'
+  Properties:
+    VpcId: !Ref PubPrivateVPC
+    AvailabilityZone: us-east-1b
+    CidrBlock: 172.31.4.0/24
+    MapPublicIpOnLaunch: true
+    Tags:
+      - Key: "Name"
+        Value: "DMZAZ2"
+
+WebAZ1:
+  Type: 'AWS::EC2::Subnet'
+  Properties:
+    VpcId: !Ref PubPrivateVPC
+    AvailabilityZone: us-east-1a
+    CidrBlock: 172.31.5.0/24
+    MapPublicIpOnLaunch: false
+    Tags:
+      - Key: "Name"
+        Value: "WebAZ1"
+
+WebAZ2:
+  Type: 'AWS::EC2::Subnet'
+  Properties:
+    VpcId: !Ref PubPrivateVPC
+    AvailabilityZone: us-east-1b
+    CidrBlock: 172.31.6.0/24
+    MapPublicIpOnLaunch: false
+    Tags:
+      - Key: "Name"
+        Value: "WebAZ2"
+
+InternalELBAZ1:
+  Type: 'AWS::EC2::Subnet'
+  Properties:
+    VpcId: !Ref PubPrivateVPC
+    AvailabilityZone: us-east-1a
+    CidrBlock: 172.31.7.0/24
+    MapPublicIpOnLaunch: false
+    Tags:
+      - Key: "Name"
+        Value: "InternalELBAZ1"
+    
+InternalELBAZ2:
+  Type: 'AWS::EC2::Subnet'
+  Properties:
+    VpcId: !Ref PubPrivateVPC
+    AvailabilityZone: us-east-1b
+    CidrBlock: 172.31.8.0/24
+    MapPublicIpOnLaunch: false
+    Tags:
+      - Key: "Name"
+        Value: "InternalELBAZ2"
+
+AppAZ1:
+  Type: 'AWS::EC2::Subnet'
+  Properties:
+    VpcId: !Ref PubPrivateVPC
+    AvailabilityZone: us-east-1a
+    CidrBlock: 172.31.9.0/24
+    MapPublicIpOnLaunch: false
+    Tags:
+      - Key: "Name"
+        Value: "AppAZ1"
+
+AppAZ2:
+  Type: 'AWS::EC2::Subnet'
+  Properties:
+    VpcId: !Ref PubPrivateVPC
+    AvailabilityZone: us-east-1b
+    CidrBlock: 172.31.10.0/24
+    MapPublicIpOnLaunch: false
+    Tags:
+      - Key: "Name"
+        Value: "AppAZ2"
+
+DBAZ1:
+  Type: 'AWS::EC2::Subnet'
+  Properties:
+    VpcId: !Ref PubPrivateVPC
+    AvailabilityZone: us-east-1a
+    CidrBlock: 172.31.11.0/24
+    MapPublicIpOnLaunch: false
+    Tags:
+      - Key: "Name"
+        Value: "DBAZ1"
+
+DBAZ2:
+  Type: 'AWS::EC2::Subnet'
+  Properties:
+    VpcId: !Ref PubPrivateVPC
+    AvailabilityZone: us-east-1b
+    CidrBlock: 172.31.12.0/24
+    MapPublicIpOnLaunch: false
+    Tags:
+      - Key: "Name"
+        Value: "DBAZ2"
+
+AdminAZ1:
+  Type: 'AWS::EC2::Subnet'
+  Properties:
+    VpcId: !Ref PubPrivateVPC
+    AvailabilityZone: us-east-1a
+    CidrBlock: 172.31.13.0/24
+    MapPublicIpOnLaunch: false
+    Tags:
+      - Key: "Name"
+        Value: "AdminAZ1"
+
+AdminAZ2:
+  Type: 'AWS::EC2::Subnet'
+  Properties:
+    VpcId: !Ref PubPrivateVPC
+    AvailabilityZone: us-east-1b
+    CidrBlock: 172.31.14.0/24
+    MapPublicIpOnLaunch: false
+    Tags:
+      - Key: "Name"
+        Value: "AdminAZ2"
+
+#############################InternetGateway Routetable#############################################
+
+InternetGateway:
+  Type: 'AWS::EC2::InternetGateway'
+  Properties:
+    Tags:
+      - Key: Name
+        Value: !Join [_, [!Ref 'AWS::StackName']]
+      - Key: Network
+        Value: Public
+
+GatewayToInternet:
+  Type: 'AWS::EC2::VPCGatewayAttachment'
+  Properties:
+    VpcId: !Ref PubPrivateVPC
+    InternetGatewayId: !Ref InternetGateway
+
+PublicRouteTable:
+  Type: 'AWS::EC2::RouteTable'
+  Properties:
+    VpcId: !Ref PubPrivateVPC
+    Tags:
+      - Key: Network
+        Value: Public
+      - Key: "Name"
+        Value: "Demo-Routetable"
+        
+PublicRoute:
+  Type: 'AWS::EC2::Route'
+  DependsOn: GatewayToInternet
+  Properties:
+    RouteTableId: !Ref PublicRouteTable
+    DestinationCidrBlock: 0.0.0.0/0
+    GatewayId: !Ref InternetGateway
+
+###########################################Routetable Association with Subnets############################
+
+ExternalELBAZ1RouteTableAssociation:
+  Type: 'AWS::EC2::SubnetRouteTableAssociation'
+  Properties:
+    SubnetId: !Ref ExternalELBAZ1
+    RouteTableId: !Ref PublicRouteTable
+
+ExternalELBAZ2RouteTableAssociation:
+  Type: 'AWS::EC2::SubnetRouteTableAssociation'
+  Properties:
+    SubnetId: !Ref ExternalELBAZ2
+    RouteTableId: !Ref PublicRouteTable
+
+DMZAZ1ELBAZ2RouteTableAssociation:
+  Type: 'AWS::EC2::SubnetRouteTableAssociation'
+  Properties:
+    SubnetId: !Ref DMZAZ1
+    RouteTableId: !Ref PublicRouteTable
+
+DMZAZ2RouteTableAssociation:
+  Type: 'AWS::EC2::SubnetRouteTableAssociation'
+  Properties:
+    SubnetId: !Ref DMZAZ2
+    RouteTableId: !Ref PublicRouteTable
+
+##################################### NAT Gateway #############################################
+
+NatGateway:
+  Type: "AWS::EC2::NatGateway"
+  DependsOn: NatPublicIP
+  Properties: 
+    AllocationId: !GetAtt NatPublicIP.AllocationId
+    SubnetId: !Ref ExternalELBAZ1
+    Tags:
+      - Key: "Name"
+        Value: "Seven-Layer-NAT"
+
+NatPublicIP:
+  Type: "AWS::EC2::EIP"
+  DependsOn: PubPrivateVPC
+  Properties:
+    Domain: vpc
+
+##########################################Private Route table & Route update#########################
+
+PrivateRouteTable:
+  Type: 'AWS::EC2::RouteTable'
+  Properties:
+    VpcId: !Ref PubPrivateVPC
+    Tags:
+      - Key: Network
+        Value: Private
+
+PrivateRoute:
+  Type: 'AWS::EC2::Route'
+  Properties:
+    RouteTableId: !Ref PrivateRouteTable
+    DestinationCidrBlock: 0.0.0.0/0
+    NatGatewayId: !Ref NatGateway
+
+################################### Private Subnet Association with Routetable########################
+
+WebAZ1RouteTableAssociation:
+  Type: 'AWS::EC2::SubnetRouteTableAssociation'
+  Properties:
+    SubnetId: !Ref WebAZ1
+    RouteTableId: !Ref PrivateRouteTable
+
+WebAZ2RouteTableAssociation:
+  Type: 'AWS::EC2::SubnetRouteTableAssociation'
+  Properties:
+    SubnetId: !Ref WebAZ2
+    RouteTableId: !Ref PrivateRouteTable
+
+AppAZ1RouteTableAssociation:
+  Type: 'AWS::EC2::SubnetRouteTableAssociation'
+  Properties:
+    SubnetId: !Ref AppAZ1
+    RouteTableId: !Ref PrivateRouteTable
+
+AppAZ2RouteTableAssociation:
+  Type: 'AWS::EC2::SubnetRouteTableAssociation'
+  Properties:
+    SubnetId: !Ref AppAZ2
+    RouteTableId: !Ref PrivateRouteTable
+
+InternalELBAZ1RouteTableAssociation:
+  Type: 'AWS::EC2::SubnetRouteTableAssociation'
+  Properties:
+    SubnetId: !Ref InternalELBAZ1
+    RouteTableId: !Ref PrivateRouteTable
+
+InternalELBAZ2RouteTableAssociation:
+  Type: 'AWS::EC2::SubnetRouteTableAssociation'
+  Properties:
+    SubnetId: !Ref InternalELBAZ2
+    RouteTableId: !Ref PrivateRouteTable
+
+DBAZ1RouteTableAssociation:
+  Type: 'AWS::EC2::SubnetRouteTableAssociation'
+  Properties:
+    SubnetId: !Ref DBAZ1
+    RouteTableId: !Ref PrivateRouteTable
+
+DBAZ2RouteTableAssociation:
+  Type: 'AWS::EC2::SubnetRouteTableAssociation'
+  Properties:
+    SubnetId: !Ref DBAZ2
+    RouteTableId: !Ref PrivateRouteTable
+
+AdminAZ1RouteTableAssociation:
+  Type: 'AWS::EC2::SubnetRouteTableAssociation'
+  Properties:
+    SubnetId: !Ref AdminAZ1
+    RouteTableId: !Ref PrivateRouteTable
+
+AdminAZ2RouteTableAssociation:
+  Type: 'AWS::EC2::SubnetRouteTableAssociation'
+  Properties:
+    SubnetId: !Ref AdminAZ2
+    RouteTableId: !Ref PrivateRouteTable
+Outputs:
+NATId:
+  Description: NAT ID
+  Value: !Ref NatGateway
+IGWId:
+  Description: IGW ID
+  Value: !Ref InternetGateway
+PrivateRouteTableId:
+  Description: PrivateRouteTable ID
+  Value: !Ref PrivateRouteTable
+VPCId:
+  Description: VPC ID
+  Value: !Ref PubPrivateVPC
+PublicRouteTableId:
+  Description: PublicRouteTable ID
+  Value: !Ref PublicRouteTable
+ExternalELBAZ1Id:
+  Description: ExternalELBAZ1 Subnet ID
+  Value: !Ref ExternalELBAZ1
+ExternalELBAZ2Id:
+  Description: ExternalELBAZ2 Subnet ID
+  Value: !Ref ExternalELBAZ2
+DMZAZ1Id:
+  Description: DMZAZ1 Subnet ID
+  Value: !Ref PubPrivateVPC
+DMZAZ1Id:
+  Description: DMZAZ1 Subnet ID
+  Value: !Ref PubPrivateVPC
