--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       - yum install -y aws-cli
   build:
     commands:
-      - echo Uploading CloudFormation template to S3.......
+      - echo Uploading CloudFormation template to S3.........
       - aws s3 cp create-vpc.yml s3://cf-templates-z5q3ztki8ohd-us-west-2/
 artifacts:
   files:
